update the palace description

--- a/index.html
+++ b/index.html
@@ -535,11 +535,11 @@
 			Still from the video instllation
 			<b><i>The Palace</i></b><br>
 			Translucent gauze, two-channel video, two-channel sound, 2023<br>
-			The Palace is a video installation featuring a narrative tutorial for empty touch— both a story and a tutorial, which literally teaches people how to open up their palace and create invisible object, while also use the metaphor and embodied philosophy of empty touch to tell a story between a monk and an emperor, who they both has forgotten about each other, but found their connections in deep memory in “the Palace”..<br><br>
+			The Palace is a video installation featuring a narrative based on empty touch— drawing inspiration from Buddism classic Shurangama Sutra and Andersen’s FairyTale The Emperor's New Clothes, the video is a narrative tutorial: tells a story between a monk and an emperor, who they both have forgotten about each other, but found their connections in deep memory in “the Palace”. It takes people through a journey of entering the palace and create invisible object. <br><br>
 		</div>
 		<div style='flex: 0.4;'><br>
 			<b><i>Empty Touch</i></b><br>
-			"Empty Touch" is a tactile phenomenon I discovered by chance, which can utilize people's habitual movements and memories to simulate the feeling of touching something without touching anything. Specifically, it is a way to conjure up the body's memory of touching something or being in a certain space through a performance without physical objects, and when the muscle memory is awakened, the person will also feel as if they have actually touched something.<br><br>
+			“Empty touch” is a tactile experience I discovered that can simulate the feeling of touching something by reenacting the gesture of touching the object guided, by verbal or visual cues.<br><br>
 			
 			<img src="https://media.discordapp.net/attachments/1069686543125598278/1107698001754992761/DSC00105.jpg?width=1688&height=1126">
 		</div>
@@ -566,8 +566,8 @@
 		<div style='flex: 0.5; padding-right:10px' >
 			<b><i>Empty Touch Workshop</i></b> <br>
 			workshop<br>
-			Using the same fictional framework as The Palace,  the workshop provides participants a metaphorical space to practice experiencing touch with gestures. Things in the palace are both empty and entity, which come not out of own embodied memories. The workshop has different variations: To touch objects, to touch the space, or to use this method to experience other artworks, such as poems, films, etc. <br><br>
-			This workshop has been hosted in Beijing UCCA Museum, Shanghai E-Flow and Richmond VCU MFA Candidacy show. 
+			Using the same fictional framework of “The Palace”,  the workshop is an embodied an interactive journey of the empty touch. The workshop starts with watching the video installation of “the Palace”, and then I acted as the host of “The Palace”, guide participants with various exercises: to touch objects, to extract texture from objects, to touch the space, or to use this method to experience other artworks, such as poems, films, etc. <br>
+			This workshop has been hosted in UCCA Museum and VCUarts Graduate Candidacy Group Exhibition.  
 			<br><br><br>
 			<img src="https://media.discordapp.net/attachments/1107698002375745537/1128555212118953984/R0000921.jpg?ex=651c4c32&is=651afab2&hm=348db89e3662c7bd590683b906cb32bda766d2884c638346cf7b9d4e70c2ee07&=&width=1668&height=1104" alt="Leilei and participants doing the warm up">workshop at UCCA.
 			<br><br>
