--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 <div id="Empty-Touch-Workshop-page" class="main" style ="background-color: black; color:aliceblue; margin-left: 5%;">
 	<div style='display: flex; ' alt="Intro to Empty Touch">
 		<div style='flex: 0.6;'>
-			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107699871705743390/DSC09986.jpg?width=1524&height=1206">
+			<img src="https://www.imagebam.com/view/MESEWHL" alt="projection to the wall and on the screen">
 			Still from the video instllation
 			<b><i>The Palace</i></b><br>
 			Translucent gauze, two-channel video, two-channel sound, 2023<br>
@@ -541,7 +541,7 @@
 			<b><i>Empty Touch</i></b><br>
 			“Empty touch” is a tactile experience I discovered that can simulate the feeling of touching something by reenacting the gesture of touching the object guided, by verbal or visual cues.<br><br>
 			
-			<img src="https://media.discordapp.net/attachments/1069686543125598278/1107698001754992761/DSC00105.jpg?width=1688&height=1126">
+			<img src="https://www.imagebam.com/view/MESEWHQ">
 		</div>
 	</div>
 	<div style="display:flex;" alt="video for the Palace">
