--- a/index.html
+++ b/index.html
@@ -549,9 +549,9 @@
 	</div><br>
 	<div style='display: flex;' alt="stills from video">
 		<div style='flex: 0.5;'>
-			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107698096940531742/DSC00047.jpg?width=1744&height=1162" alt="in front of one projection video of a person, there is big hands projected on the half transparent screen">
-			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107699873245048913/DSC09992.jpg?width=1744&height=1162" alt="in front of one projection video of a hand with silk shadow, there is big hands projected on the half transparent screen">
-			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107699817607614474/DSC00338.jpg?width=1744&height=1162">
+			<img src="https://www.imagebam.com/view/MESEWN2" alt="in front of one projection video of a person, there is big hands projected on the half transparent screen">
+			<img src="https://www.imagebam.com/view/MESEWMZ" alt="in front of one projection video of a hand with silk shadow, there is big hands projected on the half transparent screen">
+			<img src="https://www.imagebam.com/view/MESEWHQ">
 		</div>
 		<div style='flex: 0.5;'>
 			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107698372946706452/DSC00072.jpg?width=1738&height=1264">
