--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 <div id="Empty-Touch-Workshop-page" class="main" style ="background-color: black; color:aliceblue; margin-left: 5%;">
 	<div style='display: flex; ' alt="Intro to Empty Touch">
 		<div style='flex: 0.6;'>
-			<img src="https://www.imagebam.com/view/MESEWHL" alt="projection to the wall and on the screen">
+			<img src="https://images4.imagebam.com/a7/75/9a/MESEWHL_o.jpg" alt="projection to the wall and on the screen">
 			Still from the video instllation
 			<b><i>The Palace</i></b><br>
 			Translucent gauze, two-channel video, two-channel sound, 2023<br>
@@ -541,7 +541,7 @@
 			<b><i>Empty Touch</i></b><br>
 			“Empty touch” is a tactile experience I discovered that can simulate the feeling of touching something by reenacting the gesture of touching the object guided, by verbal or visual cues.<br><br>
 			
-			<img src="https://www.imagebam.com/view/MESEWHQ">
+			<img src="https://images4.imagebam.com/d9/b4/6c/MESEWHQ_o.jpg">
 		</div>
 	</div>
 	<div style="display:flex;" alt="video for the Palace">
@@ -549,9 +549,9 @@
 	</div><br>
 	<div style='display: flex;' alt="stills from video">
 		<div style='flex: 0.5;'>
-			<img src="https://www.imagebam.com/view/MESEWN2" alt="in front of one projection video of a person, there is big hands projected on the half transparent screen">
-			<img src="https://www.imagebam.com/view/MESEWMZ" alt="in front of one projection video of a hand with silk shadow, there is big hands projected on the half transparent screen">
-			<img src="https://www.imagebam.com/view/MESEWHQ">
+			<img src="https://images4.imagebam.com/d7/5e/f1/MESEWN2_o.jpg" alt="in front of one projection video of a person, there is big hands projected on the half transparent screen">
+			<img src="https://images4.imagebam.com/0f/b8/dd/MESEWMZ_o.jpg" alt="in front of one projection video of a hand with silk shadow, there is big hands projected on the half transparent screen">
+			<img src="https://images4.imagebam.com/d9/b4/6c/MESEWHQ_o.jpg">
 		</div>
 		<div style='flex: 0.5;'>
 			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107698372946706452/DSC00072.jpg?width=1738&height=1264">
