--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
 			<img src="https://media.discordapp.net/attachments/1107698002375745537/1107699836305817652/DSC00344.jpg?width=1744&height=1162">
 		</div>
 	</div>
-	<img src="https://media.discordapp.net/attachments/1107698002375745537/1120633612027572264/IMG_7227.jpg?ex=651bd2e1&is=651a8161&hm=f5a757084ca8599b49f9b5bf53a58e479f601fdcd773ac2419ee7c64002fdc74&=&width=1472&height=1104" alt="behind the scene of the installation">
+	<img src="https://images4.imagebam.com/b2/58/40/MESEWNY_o.jpg" alt="behind the scene of the installation">
 	behind the scene of the installation, one projector projects to the wall, and the other one back-project to the half transparent fabric in front of the audience.
 	<br><br><br><br>
 	<div style='display: flex; 'alt="Empty Touch Workshop">
